Fix code inspection problems: redundant modifiers, final fields, etc